GNOME Bugzilla – Bug 652409
region: trigger the layout chooser dialog response on 'row-activated' signal
Last modified: 2011-06-13 20:12:44 UTC
Allows the user to choose a new layout by double clicking or hitting enter.
Created attachment 189778 [details] [review] region: trigger the layout chooser dialog response on 'row-activated' signal
I do not like that idea. Layout chooser allows to ADD new layout, not to EDIT the current one (the one user clicked on). This would be very confusing. I do not even mention that if user already has 4 layouts, he cannot add more (the "add" button is disabled, so layout chooser cannot be invoked)
Sorry, I just noticed, in your patch you are checking the status of the "add" button. But the main argument stays - double-click is typical for editing the selected item. Here it will be used for adding new item. Very counter-intuitive.
I don't think it is counter-intuitive. Quite the reverse, I think it's a nice touch making the interaction smoother. Please bear with me: 1. User click "+" button to add a layout. 2. Starts to write on the filter entry. 3. Sees the layout he wants. Now we have two options: 4.a) The current one: user clicks the layout and must move the mouse to hit the "Add" button (or uses Alt+A). 4.b) User double clicks the layout he wants without further interaction. It just happens that 4.b) is what I actually tried to do and it didn't work thus I scratched the itch :-) But anyway, I don't agree that double clicking is typical to edit an item, quite the opposite, that's just the interaction that's possible, for instance, in the GTK+ file chooser widget.
Sorry, for some reason I thought about the primary list of layouts, on the g-c-c panel. For the chooser double-click is fine.
Committed.