region: trigger the layout chooser dialog response on 'row-activated' signal

Allows the user to choose a new layout by double clicking or hitting enter.

https://bugzilla.gnome.org/show_bug.cgi?id=652409